Prevent buttons from being squashed

--- a/resources/assets/less/bem/forum-topic-title.less
+++ b/resources/assets/less/bem/forum-topic-title.less
@@ -26,14 +26,16 @@
   overflow: hidden;
 
   &__button {
-    margin-left: 5px;
+    flex: none;
     display: flex;
+    margin-left: 5px;
     pointer-events: auto;
   }
 
   &__buttons {
-    padding-left: 20px;
+    flex: none;
     display: flex;
+    padding-left: 20px;
   }
 
   &__buttons-container {
